<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".Count3Activity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="290dp"
        android:layout_height="99dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:src="@drawable/formula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/argument_h_inp3"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="@string/argument_h_inp3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#000000"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x2_inp3" />

    <EditText
        android:id="@+id/argument_x1_inp3"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="@string/argument_x1_inp3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/argument_x2_inp3"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="@string/argument_x2_inp3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x1_inp3" />

    <TextView
        android:id="@+id/argument_x1_label3"
        android:layout_width="138dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/argument_x1_label3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_x1_inp3"
        app:layout_constraintEnd_toStartOf="@+id/argument_x1_inp3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/argument_x2_label3"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/argument_x2_label3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_x2_inp3"
        app:layout_constraintEnd_toStartOf="@+id/argument_x2_inp3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x1_label3"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/argument_h_label3"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/argument_h_label3"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_h_inp3"
        app:layout_constraintEnd_toStartOf="@+id/argument_h_inp3"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x2_label3"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_load_c3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:onClick="load"
        android:text="@string/btn_load_c3"
        android:textColor="#00423C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_load_c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save_c3" />

    <Button
        android:id="@+id/btn_load_c"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:onClick="draw"
        android:text="@string/btn_draw_c3"
        android:textColor="#00423C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_load_c3" />

    <Button
        android:id="@+id/btn_save_c3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:onClick="save"
        android:text="@string/btn_save_c3"
        android:textColor="#00423C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_load_c3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="335dp"
        android:layout_height="134dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_load_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="340dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:scrollbarThumbHorizontal="@android:color/white"
        android:scrollbarThumbVertical="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>