<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".Count2Activity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="290dp"
        android:layout_height="99dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:src="@drawable/formula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/argument_x1_label"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/argument_x1_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_x1_inp"
        app:layout_constraintEnd_toStartOf="@+id/argument_x1_inp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/argument_x1_inp"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/argument_x2_label"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/argument_x2_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_x2_inp"
        app:layout_constraintEnd_toStartOf="@+id/argument_x2_inp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/argument_x2_inp"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/argument_x2_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="@string/argument_x1_inp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x1_inp" />

    <TextView
        android:id="@+id/argument_h_label"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/argument_h_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/argument_h_inp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/argument_h_inp"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/argument_h_inp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="@string/argument_x1_inp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/result2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_x2_inp"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/btn_load_c2"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="load"
        android:text="@string/btn_load_c2"
        android:textColor="#00423C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_save_c2"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="save"
        android:text="@string/btn_save_c2"
        android:textColor="#00423C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50364965" />

    <TextView
        android:id="@+id/result2_text"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="36dp"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:text="@string/result2_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_load_c2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argument_h_inp" />

    <EditText
        android:id="@+id/argument_x1_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/argument_x1_inp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>